--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Screen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ello!</h1>
+    <h1 class="clickable_test">Ello!</h1>
+    <script type="module" src="js/index.js"> </script>
 </body>
 </html>
