Clarified some file names!

--- a/test_index.html
+++ b/test_index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 class="clickable_test">Ello!</h1>
-    <script type="module" src="js/index.js"> </script>
+    <script type="module" src="js/test_index.js"> </script>
 </body>
 </html>
