Add close button functionality to notification component

--- a/web-stuff/notification.html
+++ b/web-stuff/notification.html
@@ -11,6 +11,7 @@
     <div class="notification-container">
         <div class="notification-header">
             <h2>Notificação</h2>
+            <button id="close-notification">&times;</button>
         </div>
         <div class="notification-card">
             <div><strong>Tipo:</strong> <span id="notification-type"></span></div>
