--- a/web-stuff/notification-scrapped.html
+++ b/web-stuff/notification-scrapped.html
@@ -11,11 +11,13 @@
     <div class="notification-container">
         <div class="notification-header">
             <h2 id = "notification-header-text">Notificação</h2>
+            <button id="close-notification">&times;</button>
         </div>
         <div class="notification-card">
-            <div class="notification-info-title"><span id="notification-title"></span></div>
-            <div class="notification-info"><span style="font-weight: bold">Descrição: </span><span id="notification-description"></span></div>
-            <div class="notification-info"><span style="font-weight: bold">Esperado tocar em: </span><span id="notification-timestamp"></span></div>
+            <div class="notification-info" style="font-weight: bold;"><strong>Tipo:</strong> <span id="notification-type"></span></div>
+            <div class="notification-info"><strong>Nome:</strong> <span id="notification-title"></span></div>
+            <div class="notification-info"><strong>Descrição:</strong> <span id="notification-description"></span></div>
+            <div class="notification-info"><strong>Data:</strong> <span id="notification-timestamp"></span></div>
         </div>
     </div>
     <script src="../js/notification.js"></script>
